<?xml version="1.0" encoding="utf-8"?>
<ua.cn.stu.multimodule.core.presentation.views.ResultView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context="ua.cn.stu.multimodule.orders.presentation.create.CreateOrderFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/orderDetailsHintTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders_order_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="@dimen/core_theme_big_width"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/core_theme_form_rectangle"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderDetailsHintTextView">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_order_product"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalPriceTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/orders_total_price"/>

                    <TextView
                        android:id="@+id/totalPriceValueTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        tools:text="$999.99"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/recipientHintTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders_recipient_info"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailsContainer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/orders_first_name"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipientHintTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/orders_last_name"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstNameTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/orders_address"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commentTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/orders_additional_comment"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:inputType="text"
                    android:imeOptions="actionDone" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/createOrderButton"
                style="@style/GlobalTextInputStyle.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders_create_order"
                android:layout_marginTop="@dimen/core_theme_large_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/commentTextInput" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createOrderButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</ua.cn.stu.multimodule.core.presentation.views.ResultView>
